--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/runtime": "^7.9.6",
     "@hapi/joi": "^17.1.1",
+    "@types/express": "^4.17.6",
     "babel-eslint": "^10.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
@@ -26,9 +27,12 @@
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@babel/register": "^7.9.0",
+    "@types/node": "^14.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "chai": "^4.2.0",
     "eslint": "^7.0.0",
@@ -40,7 +44,7 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node -r dotenv/config ./src/index.js ",
+    "start": "nodemon --exec babel-node -r dotenv/config ./src/index.ts --extensions .ts",
     "test": "./node_modules/.bin/mocha --require @babel/register tests/*.js --exit",
     "migrate": "sequelize db:migrate",
     "reset": "sequelize db:migrate:undo:all",
