--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.9.6",
     "@hapi/joi": "^17.1.1",
     "@types/express": "^4.17.6",
+    "@types/validator": "^13.0.0",
     "babel-eslint": "^10.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
